--- a/package.json
+++ b/package.json
@@ -11,9 +11,15 @@
     "url": "https://github.com/bighazycrab/stack-cli.git"
   },
   "author": "Zach Gibb <zachgibb@gmail.com> (http://www.zachgibb.com/)",
-  "license": "ISC",
+  "licenses": {
+    "type": "MIT",
+    "url": "https://github.com/bighazycrab/stack-cli/blob/master/LICENSE"
+  },
   "bugs": {
     "url": "https://github.com/bighazycrab/stack-cli/issues"
   },
-  "homepage": "https://github.com/bighazycrab/stack-cli"
+  "homepage": "https://github.com/bighazycrab/stack-cli",
+  "dependencies": {
+    "stackexchange": "0.0.7"
+  }
 }
