--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   "homepage": "https://github.com/bighazycrab/stack-cli",
   "dependencies": {
     "entities": "^1.1.1",
+    "prompt": "^0.2.13",
     "stackexchange": "0.0.7"
   }
 }
