--- a/package.json
+++ b/package.json
@@ -22,10 +22,11 @@
   "dependencies": {
     "html-to-text": "^0.1.0",
     "prompt": "^0.2.13",
+    "request": "^2.40.0",
     "stackexchange": "0.0.7"
   },
   "preferGlobal": "true",
   "bin": {
-    "stack-cli" : "lib/stack.js"
+    "stack-cli": "lib/stack.js"
   }
 }
