--- a/package.json
+++ b/package.json
@@ -20,12 +20,13 @@
   },
   "homepage": "https://github.com/bighazycrab/stack-cli",
   "dependencies": {
+    "cli-color": "^0.3.2",
     "html-to-text": "^0.1.0",
     "prompt": "^0.2.13",
     "stackexchange": "0.0.7"
   },
   "preferGlobal": "true",
   "bin": {
-    "stack-cli" : "lib/stack.js"
+    "stack-cli": "lib/stack.js"
   }
 }
