added ability to open questions in browser, also minor syntax fixes

--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   "dependencies": {
     "cli-color": "^0.3.2",
     "html-to-text": "^0.1.0",
+    "open": "0.0.5",
     "prompt": "^0.2.13",
     "request": "^2.40.0",
     "stackexchange": "0.0.7"
